--- a/style.css
+++ b/style.css
@@ -45,10 +45,10 @@ body {
 }
 
 .images {
-	width: 30vw;
-	height: 73vh;
+	width: 40rem;
+	height: 40rem;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-end;
 	align-items: center;
 	position: absolute;
 	right: 2%;
@@ -58,13 +58,12 @@ body {
 
 .images img {
 	width: 100%;
-	height: 100%;
+	height: 120%;
 	object-fit: cover;
 	position: absolute;
 	opacity: 0;
 	transition: opacity 0.3 ease;
 	border: 1px solid #555;
-	border-radius: 0.75rem;
 }
 
 .t1:hover ~ .images #i1,
@@ -73,4 +72,11 @@ body {
 .t4:hover ~ .images #i4,
 .t5:hover ~ .images #i5 {
 	opacity: 1;
+}
+
+@media (max-width: 1200px) {
+	.images {
+		width: 35%;
+		height: 25%;
+	}
 }
